// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ventoDevice should be able to get status from modbus on init 1`] = `
{
  "apiCalls": {
    "capabilities": {
      "alarm_boost": [Function],
      "alarm_filter": [Function],
      "alarm_generic": [Function],
      "fan_speed": [Function],
      "manualSpeed": [Function],
      "manualSpeed_set": [Function],
      "onoff": [Function],
      "operationMode": [Function],
      "operation_mode": [Function],
      "speedMode": [Function],
      "speed_mode": [Function],
      "timerMode": [Function],
      "timer_mode": [Function],
    },
    "getCapabilityValue": {
      "alarm_boost": 2,
      "alarm_filter": 2,
      "alarm_generic": 2,
    },
    "hasCapability": {
      "alarm_boost": 1,
      "alarm_connectivity": 1,
      "alarm_filter": 1,
      "alarm_generic": 1,
      "fan_speed": 2,
      "manualSpeed": 1,
      "onoff": 1,
      "operationMode": 1,
      "speedMode": 1,
      "timerMode": 1,
    },
    "log": [
      [
        "log",
        "Locating device with id TEST1234",
      ],
      [
        "log",
        "Found device at IP 127.0.0.3",
      ],
      [
        "log",
        "Create the flow for the speed mode capability",
      ],
      [
        "log",
        "Create the flow for the manual speed capability",
      ],
      [
        "log",
        "Create the flow for the operation mode capability",
      ],
      [
        "log",
        "Create the flow for the timer mode capability",
      ],
      [
        "log",
        "Requesting the current device state",
      ],
      [
        "log",
        "Device state received: ",
        {
          "alarm": 0,
          "boost": {
            "deactivationtimer": 30,
            "mode": 0,
          },
          "fan": {
            "rpm": 236,
          },
          "filter": {
            "alarm": 0,
            "timer": {
              "days": 31,
              "hour": 20,
              "min": 34,
            },
          },
          "humidity": {
            "activated": 0,
            "current": 45,
            "sensoractivation": 1,
            "threshold": 70,
          },
          "onoff": 1,
          "operationmode": 2,
          "speed": {
            "manualspeed": 179,
            "mode": 1,
          },
          "timers": {
            "countdown": {
              "hour": 0,
              "min": 0,
              "sec": 0,
            },
            "mode": 0,
          },
          "unittype": "Vento Expert Duo A30-1 W V.2",
        },
      ],
      [
        "log",
        "Device IP changed from [object Promise] to 127.0.0.3",
      ],
      [
        "setAvailable",
        undefined,
      ],
      [
        "log",
        "Triggering alarm_boost_false",
      ],
      [
        "triggered",
        "alarm_boost_false",
        [
          VentoDevice {
            "api": ApiMock {
              "deviceId": "TEST1234",
              "deviceIp": "127.0.0.3",
              "devicePass": "password",
              "error": [Function],
              "getDeviceState": [MockFunction] {
                "calls": [
                  [],
                  [],
                ],
                "results": [
                  {
                    "type": "return",
                    "value": Promise {},
                  },
                  {
                    "type": "return",
                    "value": Promise {},
                  },
                ],
              },
              "log": [Function],
              "modbusClient": BlaubergVentoClient {
                "findDevices": [MockFunction],
                "send": [MockFunction],
                "timeout": 1500,
              },
              "send": [MockFunction] {
                "calls": [
                  [
                    E {
                      "_dataEntries": [
                        {
                          "parameter": 1,
                          "value": Uint8Array [
                            1,
                          ],
                        },
                      ],
                      "_deviceId": "TEST1234",
                      "_functionType": 2,
                      "_password": "password",
                    },
                    "127.0.0.3",
                  ],
                  [
                    E {
                      "_dataEntries": [
                        {
                          "parameter": 2,
                          "value": Uint8Array [
                            0,
                          ],
                        },
                      ],
                      "_deviceId": "TEST1234",
                      "_functionType": 2,
                      "_password": "password",
                    },
                    "127.0.0.3",
                  ],
                  [
                    E {
                      "_dataEntries": [
                        {
                          "parameter": 68,
                          "value": Uint8Array [
                            0,
                          ],
                        },
                      ],
                      "_deviceId": "TEST1234",
                      "_functionType": 2,
                      "_password": "password",
                    },
                    "127.0.0.3",
                  ],
                  [
                    E {
                      "_dataEntries": [
                        {
                          "parameter": 68,
                          "value": Uint8Array [
                            0,
                          ],
                        },
                      ],
                      "_deviceId": "TEST1234",
                      "_functionType": 2,
                      "_password": "password",
                    },
                    "127.0.0.3",
                  ],
                  [
                    E {
                      "_dataEntries": [
                        {
                          "parameter": 183,
                          "value": Uint8Array [
                            0,
                          ],
                        },
                      ],
                      "_deviceId": "TEST1234",
                      "_functionType": 2,
                      "_password": "password",
                    },
                    "127.0.0.3",
                  ],
                  [
                    E {
                      "_dataEntries": [
                        {
                          "parameter": 7,
                          "value": Uint8Array [
                            0,
                          ],
                        },
                      ],
                      "_deviceId": "TEST1234",
                      "_functionType": 2,
                      "_password": "password",
                    },
                    "127.0.0.3",
                  ],
                ],
                "results": [
                  {
                    "type": "return",
                    "value": undefined,
                  },
                  {
                    "type": "return",
                    "value": undefined,
                  },
                  {
                    "type": "return",
                    "value": undefined,
                  },
                  {
                    "type": "return",
                    "value": undefined,
                  },
                  {
                    "type": "return",
                    "value": undefined,
                  },
                  {
                    "type": "return",
                    "value": undefined,
                  },
                ],
              },
              "setBoostDelay": [Function],
              "setDeviceValue": [Function],
              "setHumiditySensor": [Function],
              "setHumiditySensorThreshold": [Function],
              "setManualSpeed": [Function],
              "setOnOffStatus": [Function],
              "setOperationMode": [Function],
              "setSpeedMode": [Function],
              "setTimerMode": [Function],
            },
            "discoveryClient": VentoDiscoveryMock {
              "findById": [MockFunction] {
                "calls": [
                  [
                    "TEST1234",
                  ],
                ],
                "results": [
                  {
                    "type": "return",
                    "value": Promise {},
                  },
                ],
              },
            },
            "error": [Function],
            "getMockCalls": [Function],
            "homey": {
              "flow": {
                "getActionCard": [Function],
                "getConditionCard": [Function],
                "getDeviceTriggerCard": [Function],
              },
              "setInterval": [MockFunction] {
                "calls": [
                  [
                    [Function],
                    15000,
                  ],
                ],
                "results": [
                  {
                    "type": "return",
                    "value": undefined,
                  },
                ],
              },
            },
            "id": "TEST1234",
            "log": [Function],
            "onCapabilityFanSpeed": [Function],
            "onCapabilityManualSpeed": [Function],
            "onCapabilityOnOff": [Function],
            "onCapabilityOperationMode": [Function],
            "onCapabilitySpeedMode": [Function],
            "onCapabilityTimerMode": [Function],
            "pollInterval": undefined,
            "settings": {
              "boost_delay": 30,
              "devicemodel": "Vento Expert Duo A30-1 W V.2",
              "devicepwd": "password",
              "humidity_sensor": true,
              "humidity_threshold": 70,
              "last_known_ip": "127.0.0.3",
            },
            "store": {
              "lastKnownIP": "127.0.0.3",
            },
          },
          {},
          {},
        ],
      ],
      [
        "log",
        "Triggering alarm_filter_false",
      ],
      [
        "triggered",
        "alarm_filter_false",
        [
          VentoDevice {
            "api": ApiMock {
              "deviceId": "TEST1234",
              "deviceIp": "127.0.0.3",
              "devicePass": "password",
              "error": [Function],
              "getDeviceState": [MockFunction] {
                "calls": [
                  [],
                  [],
                ],
                "results": [
                  {
                    "type": "return",
                    "value": Promise {},
                  },
                  {
                    "type": "return",
                    "value": Promise {},
                  },
                ],
              },
              "log": [Function],
              "modbusClient": BlaubergVentoClient {
                "findDevices": [MockFunction],
                "send": [MockFunction],
                "timeout": 1500,
              },
              "send": [MockFunction] {
                "calls": [
                  [
                    E {
                      "_dataEntries": [
                        {
                          "parameter": 1,
                          "value": Uint8Array [
                            1,
                          ],
                        },
                      ],
                      "_deviceId": "TEST1234",
                      "_functionType": 2,
                      "_password": "password",
                    },
                    "127.0.0.3",
                  ],
                  [
                    E {
                      "_dataEntries": [
                        {
                          "parameter": 2,
                          "value": Uint8Array [
                            0,
                          ],
                        },
                      ],
                      "_deviceId": "TEST1234",
                      "_functionType": 2,
                      "_password": "password",
                    },
                    "127.0.0.3",
                  ],
                  [
                    E {
                      "_dataEntries": [
                        {
                          "parameter": 68,
                          "value": Uint8Array [
                            0,
                          ],
                        },
                      ],
                      "_deviceId": "TEST1234",
                      "_functionType": 2,
                      "_password": "password",
                    },
                    "127.0.0.3",
                  ],
                  [
                    E {
                      "_dataEntries": [
                        {
                          "parameter": 68,
                          "value": Uint8Array [
                            0,
                          ],
                        },
                      ],
                      "_deviceId": "TEST1234",
                      "_functionType": 2,
                      "_password": "password",
                    },
                    "127.0.0.3",
                  ],
                  [
                    E {
                      "_dataEntries": [
                        {
                          "parameter": 183,
                          "value": Uint8Array [
                            0,
                          ],
                        },
                      ],
                      "_deviceId": "TEST1234",
                      "_functionType": 2,
                      "_password": "password",
                    },
                    "127.0.0.3",
                  ],
                  [
                    E {
                      "_dataEntries": [
                        {
                          "parameter": 7,
                          "value": Uint8Array [
                            0,
                          ],
                        },
                      ],
                      "_deviceId": "TEST1234",
                      "_functionType": 2,
                      "_password": "password",
                    },
                    "127.0.0.3",
                  ],
                ],
                "results": [
                  {
                    "type": "return",
                    "value": undefined,
                  },
                  {
                    "type": "return",
                    "value": undefined,
                  },
                  {
                    "type": "return",
                    "value": undefined,
                  },
                  {
                    "type": "return",
                    "value": undefined,
                  },
                  {
                    "type": "return",
                    "value": undefined,
                  },
                  {
                    "type": "return",
                    "value": undefined,
                  },
                ],
              },
              "setBoostDelay": [Function],
              "setDeviceValue": [Function],
              "setHumiditySensor": [Function],
              "setHumiditySensorThreshold": [Function],
              "setManualSpeed": [Function],
              "setOnOffStatus": [Function],
              "setOperationMode": [Function],
              "setSpeedMode": [Function],
              "setTimerMode": [Function],
            },
            "discoveryClient": VentoDiscoveryMock {
              "findById": [MockFunction] {
                "calls": [
                  [
                    "TEST1234",
                  ],
                ],
                "results": [
                  {
                    "type": "return",
                    "value": Promise {},
                  },
                ],
              },
            },
            "error": [Function],
            "getMockCalls": [Function],
            "homey": {
              "flow": {
                "getActionCard": [Function],
                "getConditionCard": [Function],
                "getDeviceTriggerCard": [Function],
              },
              "setInterval": [MockFunction] {
                "calls": [
                  [
                    [Function],
                    15000,
                  ],
                ],
                "results": [
                  {
                    "type": "return",
                    "value": undefined,
                  },
                ],
              },
            },
            "id": "TEST1234",
            "log": [Function],
            "onCapabilityFanSpeed": [Function],
            "onCapabilityManualSpeed": [Function],
            "onCapabilityOnOff": [Function],
            "onCapabilityOperationMode": [Function],
            "onCapabilitySpeedMode": [Function],
            "onCapabilityTimerMode": [Function],
            "pollInterval": undefined,
            "settings": {
              "boost_delay": 30,
              "devicemodel": "Vento Expert Duo A30-1 W V.2",
              "devicepwd": "password",
              "humidity_sensor": true,
              "humidity_threshold": 70,
              "last_known_ip": "127.0.0.3",
            },
            "store": {
              "lastKnownIP": "127.0.0.3",
            },
          },
          {},
          {},
        ],
      ],
      [
        "log",
        "Triggering alarm_generic_false",
      ],
      [
        "triggered",
        "alarm_generic_false",
        [
          VentoDevice {
            "api": ApiMock {
              "deviceId": "TEST1234",
              "deviceIp": "127.0.0.3",
              "devicePass": "password",
              "error": [Function],
              "getDeviceState": [MockFunction] {
                "calls": [
                  [],
                  [],
                ],
                "results": [
                  {
                    "type": "return",
                    "value": Promise {},
                  },
                  {
                    "type": "return",
                    "value": Promise {},
                  },
                ],
              },
              "log": [Function],
              "modbusClient": BlaubergVentoClient {
                "findDevices": [MockFunction],
                "send": [MockFunction],
                "timeout": 1500,
              },
              "send": [MockFunction] {
                "calls": [
                  [
                    E {
                      "_dataEntries": [
                        {
                          "parameter": 1,
                          "value": Uint8Array [
                            1,
                          ],
                        },
                      ],
                      "_deviceId": "TEST1234",
                      "_functionType": 2,
                      "_password": "password",
                    },
                    "127.0.0.3",
                  ],
                  [
                    E {
                      "_dataEntries": [
                        {
                          "parameter": 2,
                          "value": Uint8Array [
                            0,
                          ],
                        },
                      ],
                      "_deviceId": "TEST1234",
                      "_functionType": 2,
                      "_password": "password",
                    },
                    "127.0.0.3",
                  ],
                  [
                    E {
                      "_dataEntries": [
                        {
                          "parameter": 68,
                          "value": Uint8Array [
                            0,
                          ],
                        },
                      ],
                      "_deviceId": "TEST1234",
                      "_functionType": 2,
                      "_password": "password",
                    },
                    "127.0.0.3",
                  ],
                  [
                    E {
                      "_dataEntries": [
                        {
                          "parameter": 68,
                          "value": Uint8Array [
                            0,
                          ],
                        },
                      ],
                      "_deviceId": "TEST1234",
                      "_functionType": 2,
                      "_password": "password",
                    },
                    "127.0.0.3",
                  ],
                  [
                    E {
                      "_dataEntries": [
                        {
                          "parameter": 183,
                          "value": Uint8Array [
                            0,
                          ],
                        },
                      ],
                      "_deviceId": "TEST1234",
                      "_functionType": 2,
                      "_password": "password",
                    },
                    "127.0.0.3",
                  ],
                  [
                    E {
                      "_dataEntries": [
                        {
                          "parameter": 7,
                          "value": Uint8Array [
                            0,
                          ],
                        },
                      ],
                      "_deviceId": "TEST1234",
                      "_functionType": 2,
                      "_password": "password",
                    },
                    "127.0.0.3",
                  ],
                ],
                "results": [
                  {
                    "type": "return",
                    "value": undefined,
                  },
                  {
                    "type": "return",
                    "value": undefined,
                  },
                  {
                    "type": "return",
                    "value": undefined,
                  },
                  {
                    "type": "return",
                    "value": undefined,
                  },
                  {
                    "type": "return",
                    "value": undefined,
                  },
                  {
                    "type": "return",
                    "value": undefined,
                  },
                ],
              },
              "setBoostDelay": [Function],
              "setDeviceValue": [Function],
              "setHumiditySensor": [Function],
              "setHumiditySensorThreshold": [Function],
              "setManualSpeed": [Function],
              "setOnOffStatus": [Function],
              "setOperationMode": [Function],
              "setSpeedMode": [Function],
              "setTimerMode": [Function],
            },
            "discoveryClient": VentoDiscoveryMock {
              "findById": [MockFunction] {
                "calls": [
                  [
                    "TEST1234",
                  ],
                ],
                "results": [
                  {
                    "type": "return",
                    "value": Promise {},
                  },
                ],
              },
            },
            "error": [Function],
            "getMockCalls": [Function],
            "homey": {
              "flow": {
                "getActionCard": [Function],
                "getConditionCard": [Function],
                "getDeviceTriggerCard": [Function],
              },
              "setInterval": [MockFunction] {
                "calls": [
                  [
                    [Function],
                    15000,
                  ],
                ],
                "results": [
                  {
                    "type": "return",
                    "value": undefined,
                  },
                ],
              },
            },
            "id": "TEST1234",
            "log": [Function],
            "onCapabilityFanSpeed": [Function],
            "onCapabilityManualSpeed": [Function],
            "onCapabilityOnOff": [Function],
            "onCapabilityOperationMode": [Function],
            "onCapabilitySpeedMode": [Function],
            "onCapabilityTimerMode": [Function],
            "pollInterval": undefined,
            "settings": {
              "boost_delay": 30,
              "devicemodel": "Vento Expert Duo A30-1 W V.2",
              "devicepwd": "password",
              "humidity_sensor": true,
              "humidity_threshold": 70,
              "last_known_ip": "127.0.0.3",
            },
            "store": {
              "lastKnownIP": "127.0.0.3",
            },
          },
          {},
          {},
        ],
      ],
    ],
    "registerCapabilityListener": {
      "fan_speed": 1,
      "manualSpeed": 1,
      "onoff": 1,
      "operationMode": 1,
      "speedMode": 1,
      "timerMode": 1,
    },
    "registerRunListener": {
      "alarm_boost": [
        [
          [Function],
        ],
      ],
      "alarm_filter": [
        [
          [Function],
        ],
      ],
      "alarm_generic": [
        [
          [Function],
        ],
      ],
      "manualSpeed_set": [
        [
          [Function],
        ],
      ],
      "operation_mode": [
        [
          [Function],
        ],
      ],
      "speed_mode": [
        [
          [Function],
        ],
      ],
      "timer_mode": [
        [
          [Function],
        ],
      ],
    },
    "setCapabilityValue": {
      "alarm_boost": [
        [
          false,
          {
            "result": false,
          },
        ],
      ],
      "alarm_connectivity": [
        [
          false,
          "calling unregistered capability",
        ],
      ],
      "alarm_filter": [
        [
          false,
          {
            "result": false,
          },
        ],
      ],
      "alarm_generic": [
        [
          false,
          {
            "result": false,
          },
        ],
      ],
      "fan_speed": [
        [
          0.7019607843137254,
          {
            "result": undefined,
          },
        ],
      ],
      "filter_timer": [
        [
          "31:20:34",
          "calling unregistered capability",
        ],
      ],
      "manualSpeed": [
        [
          70.19607843137254,
          {
            "result": undefined,
          },
        ],
      ],
      "measure_RPM": [
        [
          236,
          "calling unregistered capability",
        ],
      ],
      "measure_humidity": [
        [
          45,
          "calling unregistered capability",
        ],
      ],
      "onoff": [
        [
          true,
          {
            "result": undefined,
          },
        ],
      ],
      "operationMode": [
        [
          "2",
          {
            "result": undefined,
          },
        ],
      ],
      "speedMode": [
        [
          "1",
          {
            "result": undefined,
          },
        ],
      ],
      "timerMode": [
        [
          "0",
          {
            "result": undefined,
          },
        ],
      ],
      "timerMode_timer": [
        [
          "0:0:0",
          "calling unregistered capability",
        ],
      ],
    },
    "settings": {
      "boost_delay": 30,
      "devicemodel": "Vento Expert Duo A30-1 W V.2",
      "devicepwd": "password",
      "humidity_sensor": true,
      "humidity_threshold": 70,
      "last_known_ip": "127.0.0.3",
    },
  },
  "getDeviceState": [
    [],
    [],
  ],
  "send": [
    [
      E {
        "_dataEntries": [
          {
            "parameter": 1,
            "value": Uint8Array [
              1,
            ],
          },
        ],
        "_deviceId": "TEST1234",
        "_functionType": 2,
        "_password": "password",
      },
      "127.0.0.3",
    ],
    [
      E {
        "_dataEntries": [
          {
            "parameter": 2,
            "value": Uint8Array [
              0,
            ],
          },
        ],
        "_deviceId": "TEST1234",
        "_functionType": 2,
        "_password": "password",
      },
      "127.0.0.3",
    ],
    [
      E {
        "_dataEntries": [
          {
            "parameter": 68,
            "value": Uint8Array [
              0,
            ],
          },
        ],
        "_deviceId": "TEST1234",
        "_functionType": 2,
        "_password": "password",
      },
      "127.0.0.3",
    ],
    [
      E {
        "_dataEntries": [
          {
            "parameter": 68,
            "value": Uint8Array [
              0,
            ],
          },
        ],
        "_deviceId": "TEST1234",
        "_functionType": 2,
        "_password": "password",
      },
      "127.0.0.3",
    ],
    [
      E {
        "_dataEntries": [
          {
            "parameter": 183,
            "value": Uint8Array [
              0,
            ],
          },
        ],
        "_deviceId": "TEST1234",
        "_functionType": 2,
        "_password": "password",
      },
      "127.0.0.3",
    ],
    [
      E {
        "_dataEntries": [
          {
            "parameter": 7,
            "value": Uint8Array [
              0,
            ],
          },
        ],
        "_deviceId": "TEST1234",
        "_functionType": 2,
        "_password": "password",
      },
      "127.0.0.3",
    ],
  ],
}
`;

exports[`ventoDevice should be able to get status when device is marked as off 1`] = `
{
  "apiCalls": {
    "capabilities": {
      "alarm_boost": [Function],
      "alarm_filter": [Function],
      "alarm_generic": [Function],
      "fan_speed": [Function],
      "manualSpeed": [Function],
      "manualSpeed_set": [Function],
      "onoff": [Function],
      "operationMode": [Function],
      "operation_mode": [Function],
      "speedMode": [Function],
      "speed_mode": [Function],
      "timerMode": [Function],
      "timer_mode": [Function],
    },
    "getCapabilityValue": {
      "alarm_boost": 2,
      "alarm_filter": 2,
      "alarm_generic": 2,
    },
    "hasCapability": {
      "alarm_boost": 1,
      "alarm_connectivity": 1,
      "alarm_filter": 1,
      "alarm_generic": 1,
      "fan_speed": 2,
      "manualSpeed": 1,
      "onoff": 1,
      "operationMode": 1,
      "speedMode": 1,
      "timerMode": 1,
    },
    "log": [
      [
        "log",
        "Locating device with id TEST1234",
      ],
      [
        "log",
        "Found device at IP 127.0.0.3",
      ],
      [
        "log",
        "Create the flow for the speed mode capability",
      ],
      [
        "log",
        "Create the flow for the manual speed capability",
      ],
      [
        "log",
        "Create the flow for the operation mode capability",
      ],
      [
        "log",
        "Create the flow for the timer mode capability",
      ],
      [
        "log",
        "Requesting the current device state",
      ],
      [
        "log",
        "Device state received: ",
        {
          "alarm": 0,
          "boost": {
            "deactivationtimer": 30,
            "mode": 0,
          },
          "fan": {
            "rpm": 236,
          },
          "filter": {
            "alarm": 0,
            "timer": {
              "days": 31,
              "hour": 20,
              "min": 34,
            },
          },
          "humidity": {
            "activated": 0,
            "current": 45,
            "sensoractivation": 1,
            "threshold": 70,
          },
          "onoff": 0,
          "operationmode": 2,
          "speed": {
            "manualspeed": 179,
            "mode": 1,
          },
          "timers": {
            "countdown": {
              "hour": 0,
              "min": 0,
              "sec": 0,
            },
            "mode": 0,
          },
          "unittype": "Vento Expert Duo A30-1 W V.2",
        },
      ],
      [
        "log",
        "Device IP changed from [object Promise] to 127.0.0.3",
      ],
      [
        "setAvailable",
        undefined,
      ],
    ],
    "registerCapabilityListener": {
      "fan_speed": 1,
      "manualSpeed": 1,
      "onoff": 1,
      "operationMode": 1,
      "speedMode": 1,
      "timerMode": 1,
    },
    "registerRunListener": {
      "alarm_boost": [
        [
          [Function],
        ],
      ],
      "alarm_filter": [
        [
          [Function],
        ],
      ],
      "alarm_generic": [
        [
          [Function],
        ],
      ],
      "manualSpeed_set": [
        [
          [Function],
        ],
      ],
      "operation_mode": [
        [
          [Function],
        ],
      ],
      "speed_mode": [
        [
          [Function],
        ],
      ],
      "timer_mode": [
        [
          [Function],
        ],
      ],
    },
    "setCapabilityValue": {
      "alarm_boost": [
        [
          false,
          {
            "result": false,
          },
        ],
      ],
      "alarm_connectivity": [
        [
          false,
          "calling unregistered capability",
        ],
      ],
      "alarm_filter": [
        [
          false,
          {
            "result": false,
          },
        ],
      ],
      "alarm_generic": [
        [
          false,
          {
            "result": false,
          },
        ],
      ],
      "fan_speed": [
        [
          0.7019607843137254,
          {
            "result": undefined,
          },
        ],
      ],
      "filter_timer": [
        [
          "31:20:34",
          "calling unregistered capability",
        ],
      ],
      "manualSpeed": [
        [
          70.19607843137254,
          {
            "result": undefined,
          },
        ],
      ],
      "measure_RPM": [
        [
          236,
          "calling unregistered capability",
        ],
      ],
      "measure_humidity": [
        [
          45,
          "calling unregistered capability",
        ],
      ],
      "onoff": [
        [
          false,
          {
            "result": undefined,
          },
        ],
      ],
      "operationMode": [
        [
          "2",
          {
            "result": undefined,
          },
        ],
      ],
      "speedMode": [
        [
          "1",
          {
            "result": undefined,
          },
        ],
      ],
      "timerMode": [
        [
          "0",
          {
            "result": undefined,
          },
        ],
      ],
      "timerMode_timer": [
        [
          "0:0:0",
          "calling unregistered capability",
        ],
      ],
    },
    "settings": {
      "boost_delay": 30,
      "devicemodel": "Vento Expert Duo A30-1 W V.2",
      "devicepwd": "password",
      "humidity_sensor": true,
      "humidity_threshold": 70,
      "last_known_ip": "127.0.0.3",
    },
  },
  "getDeviceState": [
    [],
    [],
  ],
  "send": [
    [
      E {
        "_dataEntries": [
          {
            "parameter": 1,
            "value": Uint8Array [
              1,
            ],
          },
        ],
        "_deviceId": "TEST1234",
        "_functionType": 2,
        "_password": "password",
      },
      "127.0.0.3",
    ],
    [
      E {
        "_dataEntries": [
          {
            "parameter": 2,
            "value": Uint8Array [
              0,
            ],
          },
        ],
        "_deviceId": "TEST1234",
        "_functionType": 2,
        "_password": "password",
      },
      "127.0.0.3",
    ],
    [
      E {
        "_dataEntries": [
          {
            "parameter": 68,
            "value": Uint8Array [
              0,
            ],
          },
        ],
        "_deviceId": "TEST1234",
        "_functionType": 2,
        "_password": "password",
      },
      "127.0.0.3",
    ],
    [
      E {
        "_dataEntries": [
          {
            "parameter": 68,
            "value": Uint8Array [
              0,
            ],
          },
        ],
        "_deviceId": "TEST1234",
        "_functionType": 2,
        "_password": "password",
      },
      "127.0.0.3",
    ],
    [
      E {
        "_dataEntries": [
          {
            "parameter": 183,
            "value": Uint8Array [
              0,
            ],
          },
        ],
        "_deviceId": "TEST1234",
        "_functionType": 2,
        "_password": "password",
      },
      "127.0.0.3",
    ],
    [
      E {
        "_dataEntries": [
          {
            "parameter": 7,
            "value": Uint8Array [
              0,
            ],
          },
        ],
        "_deviceId": "TEST1234",
        "_functionType": 2,
        "_password": "password",
      },
      "127.0.0.3",
    ],
  ],
}
`;

exports[`ventoDevice should be able to handle errors 1`] = `
{
  "apiCalls": {
    "capabilities": {
      "alarm_boost": [Function],
      "alarm_filter": [Function],
      "alarm_generic": [Function],
      "fan_speed": [Function],
      "manualSpeed": [Function],
      "manualSpeed_set": [Function],
      "onoff": [Function],
      "operationMode": [Function],
      "operation_mode": [Function],
      "speedMode": [Function],
      "speed_mode": [Function],
      "timerMode": [Function],
      "timer_mode": [Function],
    },
    "getCapabilityValue": {},
    "hasCapability": {
      "alarm_boost": 1,
      "alarm_connectivity": 1,
      "alarm_filter": 1,
      "alarm_generic": 1,
      "fan_speed": 2,
      "manualSpeed": 1,
      "onoff": 1,
      "operationMode": 1,
      "speedMode": 1,
      "timerMode": 1,
    },
    "log": [
      [
        "log",
        "Locating device with id TEST1234",
      ],
      [
        "error",
        "Could not connect to device at IP 127.0.0.3",
        [Error: test error],
      ],
      [
        "error",
        "Could not connect to device at IP [object Promise]",
        [Error: test error],
      ],
      [
        "log",
        "Device IP could not be found, setting device to unavailable",
      ],
      [
        "setUnavailable was called",
        "Device not discovered yet",
      ],
      [
        "log",
        "Create the flow for the speed mode capability",
      ],
      [
        "log",
        "Create the flow for the manual speed capability",
      ],
      [
        "log",
        "Create the flow for the operation mode capability",
      ],
      [
        "log",
        "Create the flow for the timer mode capability",
      ],
      [
        "log",
        "Requesting the current device state",
      ],
      [
        "error",
        "Failed to get device state, device unreachable",
        {
          "deviceId": undefined,
          "deviceIp": undefined,
        },
      ],
    ],
    "registerCapabilityListener": {
      "fan_speed": 1,
      "manualSpeed": 1,
      "onoff": 1,
      "operationMode": 1,
      "speedMode": 1,
      "timerMode": 1,
    },
    "registerRunListener": {
      "alarm_boost": [
        [
          [Function],
        ],
      ],
      "alarm_filter": [
        [
          [Function],
        ],
      ],
      "alarm_generic": [
        [
          [Function],
        ],
      ],
      "manualSpeed_set": [
        [
          [Function],
        ],
      ],
      "operation_mode": [
        [
          [Function],
        ],
      ],
      "speed_mode": [
        [
          [Function],
        ],
      ],
      "timer_mode": [
        [
          [Function],
        ],
      ],
    },
    "setCapabilityValue": {},
    "settings": {
      "devicepwd": "password",
    },
  },
  "getDeviceState": [
    [],
    [],
  ],
  "send": [],
}
`;

exports[`ventoDevice should be able to setup all capabilities 1`] = `
{
  "calls": {
    "capabilities": {
      "alarm_boost": [Function],
      "alarm_filter": [Function],
      "alarm_generic": [Function],
      "fan_speed": [Function],
      "manualSpeed": [Function],
      "manualSpeed_set": [Function],
      "onoff": [Function],
      "operationMode": [Function],
      "operation_mode": [Function],
      "speedMode": [Function],
      "speed_mode": [Function],
      "timerMode": [Function],
      "timer_mode": [Function],
    },
    "getCapabilityValue": {},
    "hasCapability": {
      "alarm_boost": 1,
      "alarm_filter": 1,
      "alarm_generic": 1,
      "fan_speed": 1,
      "manualSpeed": 1,
      "onoff": 1,
      "operationMode": 1,
      "speedMode": 1,
      "timerMode": 1,
    },
    "log": [
      [
        "log",
        "Create the flow for the speed mode capability",
      ],
      [
        "log",
        "Create the flow for the manual speed capability",
      ],
      [
        "log",
        "Create the flow for the operation mode capability",
      ],
      [
        "log",
        "Create the flow for the timer mode capability",
      ],
    ],
    "registerCapabilityListener": {
      "fan_speed": 1,
      "manualSpeed": 1,
      "onoff": 1,
      "operationMode": 1,
      "speedMode": 1,
      "timerMode": 1,
    },
    "registerRunListener": {
      "alarm_boost": [
        [
          [Function],
        ],
      ],
      "alarm_filter": [
        [
          [Function],
        ],
      ],
      "alarm_generic": [
        [
          [Function],
        ],
      ],
      "manualSpeed_set": [
        [
          [Function],
        ],
      ],
      "operation_mode": [
        [
          [Function],
        ],
      ],
      "speed_mode": [
        [
          [Function],
        ],
      ],
      "timer_mode": [
        [
          [Function],
        ],
      ],
    },
    "setCapabilityValue": {},
    "settings": {
      "devicepwd": "password",
    },
  },
}
`;

exports[`ventoDevice should init the api 1`] = `
{
  "deviceId": "TEST1234",
  "deviceIp": "127.0.0.3",
  "devicePass": "password",
}
`;
